// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayStripe should render a "danger" style stripe 1`] = `
<div class="alert alert-danger fade alert-dismissible alert-fluid show" role="alert">
  <div class="container">
    <button class="btn close btn-unstyled" aria-label="Close" type="button">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
        <title>times</title>
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
      </svg>
    </button>
    <span class="alert-indicator">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-full">
        <title>exclamation-full</title>
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-full"></use>
      </svg>
    </span>
    <strong class="lead">Danger!</strong>message</div>
</div>
`;

exports[`ClayStripe should render a "success" style stripe 1`] = `
<div class="alert alert-success fade alert-dismissible alert-fluid show" role="alert">
  <div class="container">
    <button class="btn close btn-unstyled" aria-label="Close" type="button">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
        <title>times</title>
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
      </svg>
    </button>
    <span class="alert-indicator">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-check-circle-full">
        <title>check-circle-full</title>
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#check-circle-full"></use>
      </svg>
    </span>
    <strong class="lead">Success!</strong>message</div>
</div>
`;

exports[`ClayStripe should render a "warning" style stripe 1`] = `
<div class="alert alert-warning fade alert-dismissible alert-fluid show" role="alert">
  <div class="container">
    <button class="btn close btn-unstyled" aria-label="Close" type="button">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
        <title>times</title>
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
      </svg>
    </button>
    <span class="alert-indicator">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-warning-full">
        <title>warning-full</title>
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#warning-full"></use>
      </svg>
    </span>
    <strong class="lead">Warning!</strong>message</div>
</div>
`;

exports[`ClayStripe should render an "info" style stripe 1`] = `
<div class="alert alert-info fade alert-dismissible alert-fluid show" role="alert">
  <div class="container">
    <button class="btn close btn-unstyled" aria-label="Close" type="button">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
        <title>times</title>
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
      </svg>
    </button>
    <span class="alert-indicator">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle">
        <title>info-circle</title>
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#info-circle"></use>
      </svg>
    </span>
    <strong class="lead">Info</strong>message</div>
</div>
`;

exports[`ClayStripe should render an stripe with classes 1`] = `
<div class="alert alert-info fade alert-dismissible my-custom-class alert-fluid show" role="alert">
  <div class="container">
    <button class="btn close btn-unstyled" aria-label="Close" type="button">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
        <title>times</title>
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
      </svg>
    </button>
    <span class="alert-indicator">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle">
        <title>info-circle</title>
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#info-circle"></use>
      </svg>
    </span>
    <strong class="lead">info</strong>message</div>
</div>
`;

exports[`ClayStripe should render an stripe with id 1`] = `
<div class="alert alert-info fade alert-dismissible alert-fluid show" id="myId" role="alert">
  <div class="container">
    <button class="btn close btn-unstyled" aria-label="Close" type="button">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
        <title>times</title>
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
      </svg>
    </button>
    <span class="alert-indicator">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle">
        <title>info-circle</title>
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#info-circle"></use>
      </svg>
    </span>
    <strong class="lead">info</strong>message</div>
</div>
`;

exports[`ClayStripe should render default markup 1`] = `
<div class="alert alert-info fade alert-dismissible alert-fluid show" role="alert">
  <div class="container">
    <button class="btn close btn-unstyled" aria-label="Close" type="button">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
        <title>times</title>
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
      </svg>
    </button>
    <span class="alert-indicator">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle">
        <title>info-circle</title>
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#info-circle"></use>
      </svg>
    </span>
    <strong class="lead">info</strong>message</div>
</div>
`;
